--- a/composer.json
+++ b/composer.json
@@ -59,5 +59,7 @@
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
-    }
+    },
+    "minimum-stability":"stable"
+    
 }
