--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,6 @@
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
-    "minimum-stability":"stable"
+    "minimum-stability": "dev"
     
 }
